--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ nav {
 
 .logo a {
     font-size: 20px;
+    font-weight: 500;
     text-decoration: none;
     color: #333;
     padding: 10px 20px;
@@ -54,25 +55,158 @@ nav {
 .btn-contacto a {
     text-decoration: none;
     color: #fff;
-    font-size: 14px;
+    font-size: 12.5px;
+    letter-spacing: 2px;
 }
 
 
-
-.hero-inicio {
+/* Hero inicio */
+.hero {
     padding: 20px;
-    background-color: azure;
+    background-image: url(../imagenes/hero/hero-pink.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: saturate(60%) sepia(50%);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    height: 100vh;
+    position: relative;
+}
+
+.hero-contenido {
+    max-width: 800px;
+    padding: 40px;
+}
+
+.hero h1 {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 64px;
+    margin-bottom: 40px;
+    color: #fff;
+    letter-spacing: 5px;
+}
+
+.hero p {
+    font-size: 12px;
+    color: #fff;
+    letter-spacing: 2px;
+    line-height: 18px;
+}
+
+.btn-hero {
+    padding: 10px 20px;
+    position: absolute;
+    right: 40px;
+    bottom: 40px;
+}
+
+.btn-hero a {
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px;
+    color: #fff;
+}
+
+.btn-hero i {
+    margin-right: 10px;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+}
+
+
+.sec-servicios {
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 200vh;
+}
+
+.s-serv-contenido {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 0;
+}
+
+.s-serv-contenido h2 {
+    font-size: 36px;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 2px;
+    max-width: 600px;
+    margin-bottom: 40px;
+}
+
+.s-serv-contenido p {
+    max-width: 400px;
+    margin-bottom: 60px;
+}
+
+.min-text {
+    text-transform: uppercase;
+    font-size: 10px;
+    letter-spacing: 2px;
+    color: #888;
+    border-left: 1.5px solid #888;
+    border-right: 1.5px solid #888;
+    padding: 0 40px;
+    margin: 40px;
+}
+
+.btn-vm {
+    padding: 10px 20px;
+    border: 1px solid #333;
+}
+
+.btn-vm a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #333;
+}
+
+.btn-vm i {
+    margin-left: 6px;
+    color: #333;
+    padding: 1px;
+    transform: rotate(-45deg);
+}
+
+.s-serv-img {
+    height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    text-align: left;
+    gap: 12px;
 }
 
-.hero-inicio h1 {
+.s-serv-img div {
+    background-color: #888;
+    width: 33%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.s-serv-img p {
+    font-size: 18px;
+    color: #fff;
     text-transform: uppercase;
-    font-weight: 600;
+    letter-spacing: 2px;
 }
 
-
-
+.serv-1 {
+    max-width: 50%;
+}
