--- a/css/nova-style.css
+++ b/css/nova-style.css
@@ -427,3 +427,145 @@ nav {
     margin-right: 15px;
     filter: grayscale(80%);
 }
+
+.blogs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 200vh;
+}
+
+.blogs-content {
+    padding: 180px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blogs-content h2 {
+    color: #222323;
+    font-size: 48px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 4px;
+    word-spacing: 8px;
+    line-height: 64px;
+    margin: 50px 0;
+    max-width: 1000px;
+}
+
+.blogs-img-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    gap: 8px;
+}
+
+.blogs-img-content div {
+    background-color: #acacac;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 33%;
+    height: 100%;
+}
+
+.blogs-img-content h3 {
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    line-height: 24px;
+    margin: 40px 0;
+    max-width: 70%;
+}
+
+.btn-arrow {
+    background-color: #222323;
+    color: #d9d9d9;
+    border-radius: 50%;
+    border: 0.5px solid #d9d9d9;
+    padding: 10px;
+    margin: 10px;
+    transform: rotate(-135deg);
+}
+
+.blogs-img-content div div {
+    display: contents;
+}
+
+.contact {
+    background-color: #161717;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.contact-content {
+    padding: 100px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contact-content h2 {
+    color: #ffffff;
+    font-size: 72px;
+    font-weight: 500;
+    text-transform: capitalize;
+    text-align: center;
+    letter-spacing: 2px;
+    line-height: 88px;
+    margin: 50px 0;
+    max-width: 800px;
+}
+
+.contact-content p {
+    text-align: center;
+    margin-bottom: 40px;
+    line-height: 24px;
+}
+
+.btn-contact {
+    background: #161717;
+    border-radius: 12px;
+    box-shadow: 
+        18px 8px 24px #0a0a0a, 
+        -1px -1px 64px #3d3d3d;
+    padding: 20px;
+    margin: 20px;
+}
+
+.btn-contact:hover {
+    box-shadow: 
+        0 0 100px #3d3d3d;
+    border: 0.1px solid #888787;
+}
+
+.btn-contact a {
+    color: #ffffff;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.btn-contact i {
+    transform: rotate(-135deg);
+    margin-left: 10px;
+}
+
+.btn-contact:hover i {
+    transform: rotate(-135deg) scale(1.2) translateY(2px);
+}
