--- a/css/nova-style.css
+++ b/css/nova-style.css
@@ -64,7 +64,7 @@ nav {
 .btn-black a {
     background-color: #222323;
     color: #fff;
-    padding: 10px 20px;
+    padding: 14px 20px;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 12px;
@@ -508,7 +508,7 @@ nav {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: 140vh;
 }
 
 .contact-content {
@@ -571,10 +571,10 @@ nav {
 }
 
 footer {
-    background-color: #161717;
+    background-color: #111;
     height: 80vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
 }
@@ -615,8 +615,9 @@ footer div div {
     margin-bottom: 54px;
 }
 
-
 .footer-content p {
+    font-size: 12px;
+    line-height: 24px;
     text-align: start;
     max-width: 80%;
 }
@@ -650,12 +651,11 @@ footer div div {
 
 .copyright {
     width: 100%;
-    height: 10vh;
     display: flex;
     justify-content: start;
     align-items: center;
     padding: 10px 36px;
-    margin-bottom: 10px;
+    margin: 20px 0;
 }
 
 .copyright p {
