--- a/css/nova-style.css
+++ b/css/nova-style.css
@@ -702,7 +702,8 @@ footer div div {
 
 .parallax {
     background-image: url(../imagenes/hero/hero-pink.jpg);
-    filter: grayscale(60%) sepia(30%);    height: 60vh;
+    filter: grayscale(60%) sepia(30%);    
+    height: 60vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -764,5 +765,78 @@ footer div div {
     margin: 6px 0;
 }
 
+.project-page {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    padding: 60px;
+    height: 60vh;
+}
 
+.project-page .btn-explore a {
+    color: #161717;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+.p-page-content {
+    max-width: 700px;
+}
+
+.p-page-content h1 {
+    font-size: 64px;
+    font-weight: 500;
+    text-transform: uppercase;
+    max-width: 400px;
+    margin: 20px 0;
+}
+
+.p-page-content p {
+    text-align: start;
+    margin: 10px 0;
+}
+
+.parallax-text {
+    background-image: url(../imagenes/hero/hero-pink.jpg);
+    filter: grayscale(80%) sepia(30%);    
+    height: 80vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    text-align: start;
+    color: white;
+    margin-bottom: 16px;
+}
+
+.overlay {
+    max-width: 650px;
+    padding: 60px;
+    border-radius: 10px;
+}
+
+.overlay h2 {
+    font-size: 48px;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 10px 0;
+}
+
+.overlay p {
+    color: #eeeeee;
+    text-align: start;
+    margin: 24px 0;
+}
+
+.overlay .btn-explore {
+    justify-content: start;
+}
+
+.overlay .btn-explore i {
+    margin-left: 0;
+}
 
