--- a/css/nova-style.css
+++ b/css/nova-style.css
@@ -650,6 +650,7 @@ footer div div {
 }
 
 .copyright {
+    background-color: #111;
     width: 100%;
     display: flex;
     justify-content: start;
