--- a/css/nova-style.css
+++ b/css/nova-style.css
@@ -652,16 +652,11 @@ footer div div {
 .copyright {
     background-color: #111;
     width: 100%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 10px 36px;
+    padding: 30px 36px;
     margin: 20px 0;
-}
-
-.copyright p {
     font-size: 12.5px;
     font-weight: 400;
+    text-align: start;
     letter-spacing: 2px;
 }
 
