--- a/css/nova-style.css
+++ b/css/nova-style.css
@@ -1097,3 +1097,177 @@ footer div div {
 .blog-parallax .overlay h2 {
     margin-bottom: 40px;
 }
+
+.contact-page {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.contact-title {
+    background-color: #acacac;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    padding: 80px;
+    height: 100%;
+    width: 50%;
+}
+
+.contact-title .min-text {
+    color: #fff;
+    border-left: 1px solid #fff;
+    border-right: none;
+    padding: 0 10px;
+    margin-bottom: 20px;
+}
+
+.contact-title h1 {
+    color: #fff;
+    font-size: 36px;
+    font-weight: 400;
+    text-align: start;
+    text-transform: uppercase;
+    max-width: 300px;
+}
+
+.contact-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    width: 50%;
+}
+
+label {
+    font-size: 14px;
+    font-weight: 400;
+    text-align: start;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    width: 100%;
+    margin-top: 18px;
+}
+
+input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #161717;
+    padding: 8px 0;
+    margin-top: 4px;
+    outline: none;
+}
+
+input::placeholder {
+    font-family: 'Chillax';
+    color: #acacac;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: start;
+}
+
+
+textarea {
+    width: 100%;
+    font-family: 'Chillax';
+    color: #acacac;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: start; 
+    border: none;
+    border-bottom: 1px solid #161717;
+    padding: 8px 0;
+    margin-top: 4px;
+    resize: none; 
+    outline: none;
+}
+
+button {
+    background-color: #161717;
+    color: #eeeeee;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 16px;
+    margin-top: 64px;
+    width: 100%;
+}
+
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    margin: 16px 0;
+}
+
+.c-content-info {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    padding: 80px 100px;
+    width: 45%;
+}
+
+.c-content-info div {
+    width: 100%;
+    padding: 10px 0;
+    margin: 10px 0;
+    border-bottom: 1px solid #161717;
+}
+
+.c-content-info .min-text {
+    border-right: none;
+    padding: 0 10px;
+    margin-bottom: 48px;
+}
+
+.c-content-info h2 {
+    font-size: 16px;
+    font-weight: 500;
+    text-align: start;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin: 4px 0;
+}
+
+.c-content-info p {
+    text-align: start;
+}
+
+.c-content-info ul {
+    padding: 0 10px;
+    margin: 10px;
+}
+
+.c-content-info li {
+    color: #888787;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    line-height: 20px;
+    margin: 6px 0;
+}
+
+.contact-img {
+    width: 55%;
+    height: 100%;
+    background-color: #888787;
+}
+
