--- a/css/nova-style.css
+++ b/css/nova-style.css
@@ -1355,3 +1355,77 @@ button {
     background-color: #888787;
 }
 
+
+.project-extend .p-service-content .min-text {
+    font-size: 14px;
+    padding: 10px 20px;
+    max-width: 100px;
+}
+
+.project-extend .text-service p {
+    margin: 20px 0;
+}
+
+.project-extend .text-service li {
+    line-height: 24px;
+    margin: 10px 0;
+}
+
+.p-service-content h1 {
+    font-size: 64px;
+    font-weight: 400;
+    text-transform: uppercase;
+    max-width: 100px;
+}
+
+.project-img-1 {
+    background-image: url(/imagenes/martin-sanchez-sp28h4ugLts-unsplash.jpg);
+}
+
+.project-img-2 {
+    background-image: url(/imagenes/martin-sanchez-sp28h4ugLts-unsplash.jpg);
+}
+
+.project-img-3 {
+    background-image: url(/imagenes/martin-sanchez-sp28h4ugLts-unsplash.jpg);
+}
+
+.p-ex-text {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    width: 100%;
+    padding: 80px;
+    margin: 16px 0 48px 0;
+}
+
+.p-ex-text h2 {
+    font-size: 32px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-align: start;
+    text-transform: uppercase;
+    margin: 40px 0;
+    max-width: 100px;
+}
+
+.p-ex-text h3 {
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 20px;
+}
+
+.p-ex-text ul {
+    padding: 10px;
+    margin: 0 20px;
+}
+
+.p-ex-text li {
+    color: #888787;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    line-height: 20px;
+    margin: 6px 0;
+}
